Fix vertical-align

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@ a:hover {
   }
 }
 
-.list-item > * {
+.list-item * {
     vertical-align: top;
 }
 
